# mlops2

./: README.md  README2.md  app.py.old  make_celery.py  pyproject.toml
task_app/: __init__.py  tasks.py  views.py
task_app/templates/: index.html
